syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf.docker";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

import "google/protobuf/wrappers.proto";
import "contract_asset_operation.proto";
import "executable_contract_transaction.proto";
import "data_entry.proto";
import "validation_proof.proto";

message ExecutedContractTransaction {
  bytes id = 1;
  bytes sender_public_key = 2;
  ExecutableTransaction tx = 3;
  repeated DataEntry results = 4;
  DataEntryMap results_map = 5;
  bytes results_hash = 6;
  repeated ValidationProof validation_proofs = 7;
  int64 timestamp = 8;
  repeated ContractAssetOperation asset_operations = 9;
  repeated bytes proofs = 10;
  bytes sender_address = 11;
  repeated bytes readings = 12;
  google.protobuf.BytesValue readings_hash = 13;
  bytes output_commitment = 14;
  google.protobuf.BytesValue output_commitment_opt = 15;
  ContractAssetOperationMap asset_operations_map = 16;
  int32 status_code = 17;
  google.protobuf.StringValue error_message = 18;
}