syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf.docker";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

import "google/protobuf/wrappers.proto";
import "contract_api_version.proto";
import "atomic_badge.proto";
import "validation_policy.proto";
import "stored_contract.proto";

message UpdateContractTransaction {
  bytes id = 1;
  bytes sender_public_key = 2;
  bytes contract_id = 3;
  string image = 4;
  string image_hash = 5;
  int64 fee = 6;
  int64 timestamp = 7;
  google.protobuf.BytesValue fee_asset_id = 8;
  AtomicBadge atomic_badge = 9;
  ValidationPolicy validation_policy = 10;
  ContractApiVersion api_version = 11;
  repeated bytes proofs = 12;
  bytes sender_address = 13;
  repeated bytes group_participants = 14;
  repeated bytes group_owners = 15;
  StoredContract stored_contract = 16;
}